Added configure files

--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,18 @@
 *.lo
 *.la
 *.exe
-.auto
+#.auto
 .libs
 .deps
 Makefile
-Makefile.in
+#Makefile.in
 aclocal.m4
 autom4te.cache
-config.h.in
+#config.h.in
 config.h
 config.log
 config.status
-configure
+#configure
 libtool
 stamp-*
 *-stamp
