Added some other configuration files

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,12 @@
 #.auto
 .libs
 .deps
-Makefile
+#Makefile
 #Makefile.in
-aclocal.m4
-autom4te.cache
+#aclocal.m4
+#autom4te.cache
 #config.h.in
-config.h
+#config.h
 config.log
 config.status
 #configure
