--- a/fonts/Makefile
+++ b/fonts/Makefile
@@ -77,11 +77,11 @@ am__uninstall_files_from_dir = { \
 am__installdirs = "$(DESTDIR)$(fontdir)"
 DATA = $(font_DATA)
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /tmp/toilet/.auto/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/missing --run aclocal-1.11
 AMTAR = $${TAR-tar}
-AUTOCONF = ${SHELL} /tmp/toilet/.auto/missing --run autoconf
-AUTOHEADER = ${SHELL} /tmp/toilet/.auto/missing --run autoheader
-AUTOMAKE = ${SHELL} /tmp/toilet/.auto/missing --run automake-1.11
+AUTOCONF = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/missing --run automake-1.11
 AWK = gawk
 CACA_CFLAGS =  
 CACA_LIBS = -lcaca  
@@ -108,7 +108,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /tmp/toilet/.auto/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 OBJEXT = o
 PACKAGE = toilet
@@ -126,10 +126,10 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = 
 VERSION = 0.3
-abs_builddir = /tmp/toilet/fonts
-abs_srcdir = /tmp/toilet/fonts
-abs_top_builddir = /tmp/toilet
-abs_top_srcdir = /tmp/toilet
+abs_builddir = /home/giorgio/Documenti/C/toilet/fonts
+abs_srcdir = /home/giorgio/Documenti/C/toilet/fonts
+abs_top_builddir = /home/giorgio/Documenti/C/toilet
+abs_top_srcdir = /home/giorgio/Documenti/C/toilet
 ac_ct_CC = gcc
 am__include = include
 am__leading_dot = .
@@ -156,7 +156,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /tmp/toilet/.auto/install-sh
+install_sh = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
