--- a/src/Makefile
+++ b/src/Makefile
@@ -68,11 +68,11 @@ DIST_SOURCES = $(toilet_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /tmp/toilet/.auto/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/missing --run aclocal-1.11
 AMTAR = $${TAR-tar}
-AUTOCONF = ${SHELL} /tmp/toilet/.auto/missing --run autoconf
-AUTOHEADER = ${SHELL} /tmp/toilet/.auto/missing --run autoheader
-AUTOMAKE = ${SHELL} /tmp/toilet/.auto/missing --run automake-1.11
+AUTOCONF = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/missing --run automake-1.11
 AWK = gawk
 CACA_CFLAGS =  
 CACA_LIBS = -lcaca  
@@ -99,7 +99,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /tmp/toilet/.auto/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 OBJEXT = o
 PACKAGE = toilet
@@ -117,10 +117,10 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = 
 VERSION = 0.3
-abs_builddir = /tmp/toilet/src
-abs_srcdir = /tmp/toilet/src
-abs_top_builddir = /tmp/toilet
-abs_top_srcdir = /tmp/toilet
+abs_builddir = /home/giorgio/Documenti/C/toilet/src
+abs_srcdir = /home/giorgio/Documenti/C/toilet/src
+abs_top_builddir = /home/giorgio/Documenti/C/toilet
+abs_top_srcdir = /home/giorgio/Documenti/C/toilet
 ac_ct_CC = gcc
 am__include = include
 am__leading_dot = .
@@ -147,7 +147,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /tmp/toilet/.auto/install-sh
+install_sh = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
