--- a/test/Makefile
+++ b/test/Makefile
@@ -49,11 +49,11 @@ DIST_SOURCES =
 am__tty_colors = \
 red=; grn=; lgn=; blu=; std=
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /tmp/toilet/.auto/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/missing --run aclocal-1.11
 AMTAR = $${TAR-tar}
-AUTOCONF = ${SHELL} /tmp/toilet/.auto/missing --run autoconf
-AUTOHEADER = ${SHELL} /tmp/toilet/.auto/missing --run autoheader
-AUTOMAKE = ${SHELL} /tmp/toilet/.auto/missing --run automake-1.11
+AUTOCONF = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/missing --run automake-1.11
 AWK = gawk
 CACA_CFLAGS =  
 CACA_LIBS = -lcaca  
@@ -80,7 +80,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /tmp/toilet/.auto/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 OBJEXT = o
 PACKAGE = toilet
@@ -98,10 +98,10 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = 
 VERSION = 0.3
-abs_builddir = /tmp/toilet/test
-abs_srcdir = /tmp/toilet/test
-abs_top_builddir = /tmp/toilet
-abs_top_srcdir = /tmp/toilet
+abs_builddir = /home/giorgio/Documenti/C/toilet/test
+abs_srcdir = /home/giorgio/Documenti/C/toilet/test
+abs_top_builddir = /home/giorgio/Documenti/C/toilet
+abs_top_srcdir = /home/giorgio/Documenti/C/toilet
 ac_ct_CC = gcc
 am__include = include
 am__leading_dot = .
@@ -128,7 +128,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /tmp/toilet/.auto/install-sh
+install_sh = ${SHELL} /home/giorgio/Documenti/C/toilet/.auto/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
